data/all_generated_tests/raw_wast_tests/call_TypeMismatchinControlFlowInstructions_3738.wast
;; 7. **Recursive Call with Incorrect Argument Types**:    - **Description**: Create a recursive function call where the argument type passed initially is incorrect.    - **Reasoning**: Evaluates if recursive calls appropriately maintain type constraints for each recursion step.    - **Constraint**: Checks for consistent error signaling on argument type mismatches in recursive calls.    - **Relation**: Ensures proper recursive function argument handling under type constraints.

(assert_invalid
  (module
    (func $recursive-call-incorrect-type (param i32) (result i32)
      local.get 0
      i32.const 1
      i32.add
      call $recursive-call-incorrect-type
    )
  )
  "type mismatch"
)